// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VaultsController GET /v2/harvests error cases returns a 400 for invalide chain 1`] = `
Object {
  "message": "invalid is not a supported chain",
}
`;

exports[`VaultsController GET /v2/harvests success cases Return extended harvest for chain vaults 1`] = `
Object {
  "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28": Array [],
}
`;

exports[`VaultsController GET /v2/harvests/:vault error cases returns a 400 for invalide chain 1`] = `
Object {
  "message": "invalid is not a supported chain",
}
`;

exports[`VaultsController GET /v2/harvests/:vault success cases Return extended harvests for chain vault by addr 1`] = `Array []`;

exports[`VaultsController GET /v2/vaults with a specified chain returns the vaults for bsc 1`] = `
Array [
  Object {
    "apr": 8.26,
    "apy": 8.26,
    "asset": "BADGER",
    "available": 0,
    "balance": 10,
    "behavior": "Compounder",
    "boost": Object {
      "enabled": false,
      "weight": 0,
    },
    "bouncer": "none",
    "lastHarvest": 1656606946,
    "name": "Badger",
    "pricePerFullShare": 1,
    "protocol": "Badger",
    "sources": Array [
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Badger Rewards",
      },
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Curve Trading Fees",
      },
    ],
    "sourcesApy": Array [
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Badger Rewards",
      },
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Curve Trading Fees",
      },
    ],
    "state": "open",
    "strategy": Object {
      "address": "0x0000000000000000000000000000000000000000",
      "aumFee": 0,
      "performanceFee": 20,
      "strategistFee": 0,
      "withdrawFee": 50,
    },
    "tokens": Array [
      Object {
        "address": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
        "balance": 52,
        "decimals": 18,
        "name": "Badger",
        "symbol": "BADGER",
        "value": 43628,
      },
    ],
    "type": "native",
    "underlyingToken": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    "value": 105879,
    "vaultAsset": "bBADGER",
    "vaultToken": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "version": "v1",
    "yieldProjection": Object {
      "harvestApr": 8.484984091523238,
      "harvestApy": 8.484984091523238,
      "harvestPeriodApr": 8.26,
      "harvestPeriodApy": 8.26,
      "harvestTokens": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0.22498409152323756,
          "balance": 10,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 12510,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Badger Rewards",
          "symbol": "emission",
          "value": 4372.802699999999,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Curve Trading Fees",
          "symbol": "lp_fee",
          "value": 4372.802699999999,
        },
      ],
      "harvestTokensPerPeriod": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0,
          "balance": 0,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 0,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Badger Rewards",
          "symbol": "emission",
          "value": 4372.802699999999,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Curve Trading Fees",
          "symbol": "lp_fee",
          "value": 4372.802699999999,
        },
      ],
      "harvestValue": 12510,
      "yieldApr": 8.484984091523238,
      "yieldPeriodApr": 8.26,
      "yieldTokens": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0.22498409152323756,
          "balance": 10,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 12510,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Badger Rewards",
          "symbol": "emission",
          "value": 4372.802699999999,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Curve Trading Fees",
          "symbol": "lp_fee",
          "value": 4372.802699999999,
        },
      ],
      "yieldTokensPerPeriod": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0,
          "balance": 0,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 0,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Badger Rewards",
          "symbol": "emission",
          "value": 4372.802699999999,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Curve Trading Fees",
          "symbol": "lp_fee",
          "value": 4372.802699999999,
        },
      ],
      "yieldValue": 12510,
    },
  },
]
`;

exports[`VaultsController GET /v2/vaults with a specified chain returns the vaults for eth 1`] = `
Array [
  Object {
    "apr": 8.26,
    "apy": 8.26,
    "asset": "BADGER",
    "available": 0,
    "balance": 10,
    "behavior": "Compounder",
    "boost": Object {
      "enabled": false,
      "weight": 0,
    },
    "bouncer": "none",
    "lastHarvest": 1656606946,
    "name": "Badger",
    "pricePerFullShare": 1,
    "protocol": "Badger",
    "sources": Array [
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Badger Rewards",
      },
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Curve Trading Fees",
      },
    ],
    "sourcesApy": Array [
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Badger Rewards",
      },
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Curve Trading Fees",
      },
    ],
    "state": "open",
    "strategy": Object {
      "address": "0x0000000000000000000000000000000000000000",
      "aumFee": 0,
      "performanceFee": 20,
      "strategistFee": 0,
      "withdrawFee": 50,
    },
    "tokens": Array [
      Object {
        "address": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
        "balance": 52,
        "decimals": 18,
        "name": "Badger",
        "symbol": "BADGER",
        "value": 43628,
      },
    ],
    "type": "native",
    "underlyingToken": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    "value": 105879,
    "vaultAsset": "bBADGER",
    "vaultToken": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "version": "v1",
    "yieldProjection": Object {
      "harvestApr": 8.484984091523238,
      "harvestApy": 8.484984091523238,
      "harvestPeriodApr": 8.26,
      "harvestPeriodApy": 8.26,
      "harvestTokens": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0.22498409152323756,
          "balance": 10,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 12510,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Badger Rewards",
          "symbol": "emission",
          "value": 4372.802699999999,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Curve Trading Fees",
          "symbol": "lp_fee",
          "value": 4372.802699999999,
        },
      ],
      "harvestTokensPerPeriod": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0,
          "balance": 0,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 0,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Badger Rewards",
          "symbol": "emission",
          "value": 4372.802699999999,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Curve Trading Fees",
          "symbol": "lp_fee",
          "value": 4372.802699999999,
        },
      ],
      "harvestValue": 12510,
      "yieldApr": 8.484984091523238,
      "yieldPeriodApr": 8.26,
      "yieldTokens": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0.22498409152323756,
          "balance": 10,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 12510,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Badger Rewards",
          "symbol": "emission",
          "value": 4372.802699999999,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Curve Trading Fees",
          "symbol": "lp_fee",
          "value": 4372.802699999999,
        },
      ],
      "yieldTokensPerPeriod": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0,
          "balance": 0,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 0,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Badger Rewards",
          "symbol": "emission",
          "value": 4372.802699999999,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Curve Trading Fees",
          "symbol": "lp_fee",
          "value": 4372.802699999999,
        },
      ],
      "yieldValue": 12510,
    },
  },
]
`;

exports[`VaultsController GET /v2/vaults with an invalid specified chain returns a 400 1`] = `
Object {
  "message": "invalid is not a supported chain",
}
`;

exports[`VaultsController GET /v2/vaults with no specified chain returns eth vaults 1`] = `
Array [
  Object {
    "apr": 8.26,
    "apy": 8.26,
    "asset": "BADGER",
    "available": 0,
    "balance": 10,
    "behavior": "Compounder",
    "boost": Object {
      "enabled": false,
      "weight": 0,
    },
    "bouncer": "none",
    "lastHarvest": 1656606946,
    "name": "Badger",
    "pricePerFullShare": 1,
    "protocol": "Badger",
    "sources": Array [
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Badger Rewards",
      },
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Curve Trading Fees",
      },
    ],
    "sourcesApy": Array [
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Badger Rewards",
      },
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Curve Trading Fees",
      },
    ],
    "state": "open",
    "strategy": Object {
      "address": "0x0000000000000000000000000000000000000000",
      "aumFee": 0,
      "performanceFee": 20,
      "strategistFee": 0,
      "withdrawFee": 50,
    },
    "tokens": Array [
      Object {
        "address": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
        "balance": 52,
        "decimals": 18,
        "name": "Badger",
        "symbol": "BADGER",
        "value": 43628,
      },
    ],
    "type": "native",
    "underlyingToken": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    "value": 105879,
    "vaultAsset": "bBADGER",
    "vaultToken": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "version": "v1",
    "yieldProjection": Object {
      "harvestApr": 8.484984091523238,
      "harvestApy": 8.484984091523238,
      "harvestPeriodApr": 8.26,
      "harvestPeriodApy": 8.26,
      "harvestTokens": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0.22498409152323756,
          "balance": 10,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 12510,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Badger Rewards",
          "symbol": "emission",
          "value": 4372.802699999999,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Curve Trading Fees",
          "symbol": "lp_fee",
          "value": 4372.802699999999,
        },
      ],
      "harvestTokensPerPeriod": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0,
          "balance": 0,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 0,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Badger Rewards",
          "symbol": "emission",
          "value": 4372.802699999999,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Curve Trading Fees",
          "symbol": "lp_fee",
          "value": 4372.802699999999,
        },
      ],
      "harvestValue": 12510,
      "yieldApr": 8.484984091523238,
      "yieldPeriodApr": 8.26,
      "yieldTokens": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0.22498409152323756,
          "balance": 10,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 12510,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Badger Rewards",
          "symbol": "emission",
          "value": 4372.802699999999,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Curve Trading Fees",
          "symbol": "lp_fee",
          "value": 4372.802699999999,
        },
      ],
      "yieldTokensPerPeriod": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0,
          "balance": 0,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 0,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Badger Rewards",
          "symbol": "emission",
          "value": 4372.802699999999,
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "apr": 4.13,
          "balance": 0,
          "decimals": 0,
          "name": "Curve Trading Fees",
          "symbol": "lp_fee",
          "value": 4372.802699999999,
        },
      ],
      "yieldValue": 12510,
    },
  },
]
`;
